--- a/test/Argument.Test/Argument.Test.csproj
+++ b/test/Argument.Test/Argument.Test.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ArgumentIsNotNullOrEmptyTests.cs" />
     <Compile Include="ArgumentIsInRangeTests.cs" />
     <Compile Include="ArgumentIsNotNullTests.cs" />
+    <Compile Include="ArgumentIsWellFormedUriStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
