--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -10,14 +10,10 @@
     <userSettings>
         <SteveCadwallader.CodeMaid.Properties.Settings>
             <setting name="Cleaning_ExclusionExpression" serializeAs="String">
-                <value>\.Designer\.cs$||\.Designer\.vb$||\.resx$||job_scheduling_data_2_0\.xsd$||Scripts\\typings\\.+\.d\.ts$||packages\.config$||\.min.css$||\.min.js$||\.svg$</value>
+                <value>\.Designer\.cs$||\.Designer\.vb$||\.resx$</value>
             </setting>
             <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="Cleaning_UsingStatementsToReinsertWhenRemovedExpression"
-                serializeAs="String">
-                <value>using System;||using System.Linq;||</value>
             </setting>
             <setting name="Cleaning_IncludeCSS" serializeAs="String">
                 <value>False</value>
