--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ environment:
 before_build:
 - cmd: dotnet restore
 - ps: gitversion /l console /output buildserver /updateAssemblyInfo
-- ps: $env:APPVEYOR_BUILD_VERSION = %GitVersion_MajorMinorPatch%
+- cmd: SET APPVEYOR_BUILD_VERSION = %GitVersion_MajorMinorPatch%
 
 build:
   publish_nuget: true
