--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,28 @@
-version: 1.0.{build}
+version: 0.{build}
+image: Visual Studio 2017
 configuration: Release
-assembly_info:
+
+environment:
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
+
+install:
+  - cmd: dotnet restore
+  - ps: gitversion /l console /output buildserver
+
+dotnet_csproj:
   patch: true
-  file: '**\AssemblyInfo.*'
-  assembly_version: '{version}'
-  assembly_file_version: '{version}'
-  assembly_informational_version: '{version}'
-before_build:
-- cmd: nuget restore -verbosity quiet
+  file: '**\*.csproj'
+  version: $(GitVersion_SemVer)
+  assembly_version: $(GitVersion_MajorMinorPatch)
+  informational_version: $(GitVersion_InformationalVersion)
+
 build:
   publish_nuget: true
   parallel: true
   verbosity: minimal
+
+test:
+  assemblies: '**\*.Tests.dll'
+
 deploy: off
