--- a/src/Argument/Argument.csproj
+++ b/src/Argument/Argument.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard1.0</TargetFramework>
+        <TargetFrameworks>netstandard1.0;net40</TargetFrameworks>
         <CodeAnalysisRuleSet>../../CustomExtendedCorrectnessRules.ruleset</CodeAnalysisRuleSet>
         <Features>IOperation</Features>
         <LangVersion>latest</LangVersion>
@@ -18,11 +18,13 @@
         <PackageLicenseUrl>https://github.com/EnableSoftware/Enable.Common.Argument/blob/master/LICENSE</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/EnableSoftware/Enable.Common.Argument</RepositoryUrl>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.6.0">
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.0'">
+        <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.6.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.NetCore.Analyzers" Version="2.6.0">
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.6.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
